--- a/Módulo 1/Desafios/Teste ultimos games que joguei/style.css
+++ b/Módulo 1/Desafios/Teste ultimos games que joguei/style.css
@@ -1,5 +1,88 @@
-@charset "UTF-8"
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Itim&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap');
+
+:root {
+    --font-padrão: 'Arial';
+    --font-destaque: "Itim", cursive;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
 
 body {
-    background-color: aqua;
+    background-attachment: fixed;
+    background-image: linear-gradient(to top, aqua, rgb(0, 255, 98));
+    font-family: monospace;
+    text-align: justify;
+    padding-top: 40px;
 }
+
+main {
+    background-color: white;
+    min-width: 300px;
+    max-width: 750px;
+    margin: auto;
+    padding: 10px 10px 10px 10px;
+    border-radius: 10px;
+}
+main h1 {
+    text-align: center;
+    font-size: 3em;
+    font-family: var(--font-destaque);
+    background-color: aqua;
+    margin: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.226);
+}
+
+p#list {
+    color: rgb(44, 94, 74);
+    font-size: 2em;
+    font-family: var(--font-destaque);
+    text-align: center;
+}
+ div.lista {
+    padding: 10px;
+    list-style-position: inside;
+ }
+ div > ul {
+    display: none;
+ }
+
+ div:hover > ul {
+    display: block;
+ }
+
+ ul {
+    padding: 10px;
+    background-color: aquamarine;
+    width: 180px;
+    margin: auto;
+    border: 1px dashed black;
+    border-radius: 10px;
+ }
+
+ main h2 {
+    padding: 10px;
+    font-family: var(--font-destaque);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.267);
+ }
+
+ main p {
+    text-align: justify;
+    font-family: var(--font-padrão);
+    text-indent: 25px;
+    padding: 10px;
+ }
+
+ main div.imagem {
+    height: 200px;
+    width: 400px;
+    background-color: lightgrey;
+    border-radius: 10px;
+    background-image: url(https://img.elo7.com.br/product/zoom/1EAAE02/big-poster-gamer-god-of-war-2018-tamanho-90x-0-cm-lo041-decoracao-nerd.jpg);
+    background-size: contain;
+    margin: auto;
+ }
