--- a/modulo-3/desafio 12/estilo/style.css
+++ b/modulo-3/desafio 12/estilo/style.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Itim&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Passion+One:wght@400;700;900&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Itim&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Passion+One:wght@400;700;900&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Sriracha&display=swap');
+
+:root {
+    --fonte-normal-1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte-passion-2: "Passion One", sans-serif;
+    --fonte-sriracha-3: "Sriracha", cursive;
+}
 
 * {
     margin: 0px;
@@ -8,6 +16,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgrey;
+    font-family: var(--fonte-normal-1);
 }
 
 header {
@@ -19,6 +28,8 @@ header {
 header h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte-passion-2);
+    font-size: 10vw;
 }
 
 header p {
@@ -40,6 +51,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte-sriracha-3);
+    font-size: 4vw;
 }
 
 section.normal {
@@ -55,7 +68,7 @@ section.imagem {
 section.imagem p {
     background-color: rgba(0, 0, 0, 0.226);
     padding: 10px;
-    width: 400px;
+    display: inline-block;
 }
 
 footer {
