--- a/modulo-3/desafio 12/estilo/style.css
+++ b/modulo-3/desafio 12/estilo/style.css
@@ -52,7 +52,26 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte-sriracha-3);
-    font-size: 4vw;
+    font-size: 3.5vw;
+}
+
+section p {
+    padding-bottom: 2em;
+}
+
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+    background-attachment: fixed;
+
+}
+
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.normal {
@@ -63,12 +82,14 @@ section.normal {
 section.imagem {
     background-color: rgb(107, 98, 98);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.534);
 }
 
 section.imagem p {
-    background-color: rgba(0, 0, 0, 0.226);
+    background-color: rgba(0, 0, 0, 0.514);
     padding: 10px;
     display: inline-block;
+    text-shadow: 1px 1px 0px black;
 }
 
 footer {
